[package]
name = "rv64emu_esp32s3"
version = "0.1.0"
authors = ["leesum <1255273338@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]


esp32s3-hal = { package = "esp32s3-hal",version = "0.11.0",features = ["opsram_8m"] }

esp-alloc = "0.3.0"
esp-println = { version = "0.5.0", features = ["esp32s3", "log"] }

esp-backtrace = { version = "0.7.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

log = "0.4.18"
rv64emu = { version = "0.1.1", default_features = false, features = ["alloc"] }


# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true
# debug = 1
# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
lto = true
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
